# secure_link_client

./: .env  .gitignore  .stellar-a.env  Cargo.toml  Cross.toml  Dockerfile  README.md  cross_compile_release.sh
dev_certs/: 192.168.1.143.crt  192.168.12.16.crt  host.docker.internal.crt  host.docker.internal.key  localhost.crt  server.crt
src/: cs_global_chanel_sender.rs  dev_cert_loader.rs  global_channel.rs  lib.rs  main.rs  proxy_channel.rs  secure_link.rs  secure_link_windows_service.rs  tls_connect.rs
src/pdu/: global_channel_join_response.rs  global_channel_message.rs  proxy_channel_join_request.rs  proxy_channel_join_response.rs
src/protocol/: global_channel_join_request.rs  global_channel_join_response.rs  global_channel_message.rs  mod.rs  proxy_channel_join_request.rs
